--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ kramdown:
   syntax_highlighter: rouge
   math_engine: mathjax
   
-# Plugins
+# Plugins (GitHub Pages 支持的插件)
 plugins:
   - jekyll-feed
   - jekyll-sitemap
@@ -42,7 +42,7 @@ collections:
     output: true
   mcp:
     output: true
-    permalink: /:collection/:name/
+    permalink: /mcp/:name/
 
 # Defaults
 defaults:
