--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,8 @@ navigation:
     url: "/"
   - title: "MCP 教程"
     url: "/mcp/"
+  - title: "AI 编程"
+    url: "/agent/"
   - title: "关于"
     url: "/about/"
 
@@ -44,6 +46,9 @@ collections:
   mcp:
     output: true
     permalink: /mcp/:name/
+  agent:
+    output: true
+    permalink: /agent/:name/
 
 # Defaults
 defaults:
@@ -55,5 +60,10 @@ defaults:
   - scope:
       path: ""
       type: "mcp"
+    values:
+      layout: "post"
+  - scope:
+      path: ""
+      type: "agent"
     values:
       layout: "post"  
