add agent article and change some article data

--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,8 @@ navigation:
 # Social links
 social:
   github: "xunberg"
+  csdn: "https://blog.csdn.net/zxlp520"
+  juejin: "https://juejin.cn/user/1239904848969895"
   
 # Collections
 collections:
